<resources>
    <string name="app_name">Popular Movies</string>
    <!--YOUR_API_KEY_HERE-->
    <string name="api_key">a780e4ca292bd0d419c740b86d62b4ea</string>

    <string name="some_unknown_error_has_occurred">Some unknown error has occurred</string>

    <string name="no_network_connection">No network connection</string>
    <string name="retry">RETRY</string>
    <string name="no_movies_found">No movies found</string>
    <string name="title_activity_movie_details">MovieDetailsActivity</string>
    <string name="loading">Loading...</string>
    <string name="release_date">Release date:</string>
    <string name="genre">Genre:</string>
    <string name="retry_button">Retry</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tagline">Tagline</string>
    <string name="overview">Overview</string>
    <string name="images">Images</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="add_movies_to_favourites">Add movies to favourites</string>

</resources>
